testsuite/tests/interpreter/null_node_access/test.out
script.lkql:2:7: error: Null receiver in dot access
2 | print(n.pouet)
  |       ^^^^^^^ 

